0.8.1   (under development)

	o	Evaluating a call inside an environment did not work properly

0.8.0   2010-05-17

    o   All Rcpp headers have been moved to the inst/include directory,
        allowing use of 'LinkingTo: Rcpp'. But the Makevars and Makevars.win
        are still needed to link against the user library.

    o   Automatic exception forwarding has been withdrawn because of
        portability issues (as it did not work on the Windows platform).
        Exception forwarding is still possible but is now based on explicit
        code of the form:
    
          try {
            // user code
          } catch( std::exception& __ex__){ 
            forward_exception_to_r( __ex___ ) ;
          }
    
        Alternatively, the macro BEGIN_RCPP and END_RCPP can use used to enclose
        code so that it captures exceptions and forward them to R. 
    
          BEGIN_RCPP
          // user code
          END_RCPP
    
    o   new __experimental__ macros 
    
        The macros RCPP_FUNCTION_0, ..., RCPP_FUNCTION_65 to help creating C++
        functions hiding some code repetition: 
    
          RCPP_FUNCTION_2( int, foobar, int x, int y){
           return x + y ;
          }

        The first argument is the output type, the second argument is the
        name of the function, and the other arguments are arguments of the
        C++ function. Behind the scenes, the RCPP_FUNCTION_2 macro creates an
        intermediate function compatible with the .Call interface and handles
        exceptions
    
        Similarly, the macros RCPP_FUNCTION_VOID_0, ..., RCPP_FUNCTION_VOID_65 
        can be used when the C++ function to create returns void. The generated
        R function will return R_NilValue in this case.
    
          RCPP_FUNCTION_VOID_2( foobar, std::string foo ){
           // do something with foo
          }
      
        The macro RCPP_XP_FIELD_GET generates a .Call compatible function that